--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "program": "semi_train.py",
             "console": "integratedTerminal",
-            "env": {"CUDA_VISIBLE_DEVICES":"0"},
+            "env": {"CUDA_VISIBLE_DEVICES":"5,6"},
             "python": "/home/xukeke/anaconda3/envs/SSL/bin/python",
             "args": [
                 "--train_1", "/home/mdisk2/xukeke/CR_STR/datasets/train_dataset/label/CVPR2016",
@@ -21,8 +21,8 @@
                 "--valid_data", "/home/mdisk2/xukeke/CR_STR/datasets/data_CVPR2021/evaluation/benchmark",
                 "--eval_data", "/home/mdisk2/xukeke/CR_STR/datasets/data_CVPR2021/evaluation",
                 "--eval_type", "benchmark",
-                "--batchSize", "256",
-                "--unl_batchSize", "256",
+                "--batchSize", "768",
+                "--unl_batchSize", "768",
                 "--model_name", "TRBA",
                 // "--model_name", "CRNN",
                 "--exp_name","TRBA_test",
@@ -35,19 +35,18 @@
                 "--optimizer", "adamw",
                 "--weight_decay", "0.01",
                 "--lr", "0.001",
-                "--data_usage_ratio","0.01",
-                "--unlabel_data_usage_ratio","0.1",
-                // "--robust", "True",
-                "--calibrator", "CAL",
-                "--alpha", "0.1",
+                "--data_usage_ratio","0.1",
+                "--unlabel_data_usage_ratio","1",
+                "--robust", "True",
+                "--calibrator", "CAL",  // CAL
+                "--alpha", "0.05",
                 "--exp_base", "8",
                 "--transit_time_ratio", "0.2",
                 // "--saved_model", "saved_models_fullchar/TRBA/CrossEntropy/semi_exp_part/iter_15000.pth",
-                "--num_iter", "30000",
-                "--val_interval", "100",
+                "--num_iter", "100000",
+                "--val_interval", "1000",
                 "--checkpoint_root", "saved_models_fullchar",
                 "--language", "en",
-                // "--sensitive",
                 // "--mode", "test"
             ]
         },
@@ -57,15 +56,18 @@
             "request": "launch",
             "program": "semi_train.py",
             "console": "integratedTerminal",
-            "env": {"CUDA_VISIBLE_DEVICES":"2"},
+            "env": {"CUDA_VISIBLE_DEVICES":"5"},
             "python": "/home/xukeke/anaconda3/envs/SSL/bin/python",
             "args": [
                 "--train_1", "/home/mdisk2/xukeke/CR_STR/datasets/train_dataset/label/CVPR2016",
                 "--train_2", "/home/mdisk2/xukeke/CR_STR/datasets/train_dataset/label/NIPS2014",
                 "--valid_data", "/home/mdisk2/xukeke/CR_STR/datasets/data_CVPR2021/evaluation/benchmark",
-                "--eval_data", "/home/mdisk2/xukeke/CR_STR/datasets/data_CVPR2021/evaluation",
-                "--eval_type", "benchmark",
-                "--batchSize", "32",
+                "--eval_data", 
+                "/home/mdisk2/xukeke/CR_STR/datasets/mm24_test",
+                // "/home/mdisk2/xukeke/CR_STR/datasets/data_CVPR2021/evaluation",
+                // "/home/mdisk2/xukeke/CR_STR/datasets",
+                "--eval_type", "common_six", // benchmark  addition  common_six   challenge_dataset  all
+                "--batchSize", "128",
                 "--model_name", "TRBA",
                 "--exp_name","exp_test",
                 "--num_iter","250000",
@@ -77,8 +79,12 @@
                 // "--alpha", "0.05",
                 // "--exp_base", "4",
                 // "--robust", "True",
-                "--saved_model","saved_models_fullchar/TRBA/CrossEntropy/semi_exp_part_las_both/best_score.pth",
-                "--json_path","exp_json/trba_las_part_fullchar.json",
+                "--saved_model",
+                // "saved_models_fullchar/TRBA/CrossEntropy/semi_exp/CE/0.1/iter_115000.pth",   // trba-cr
+                "saved_models_fullchar/TRBA/robust/CAL/alpha0.05/exp_base8/semi_exp_new_threshold/best_score.pth",   // dcss
+                // "saved_models_fullchar/TRBA/robust/CAL/alpha0.1/exp_base8/semi_exp_new_th_without_da/best_score.pth", 
+                // "saved_models_fullchar/TRBA/robust/CAL/alpha0.05/exp_base8/semi_exp_new_threshold/iter_85000.pth",  // css
+                "--json_path","exp_json/dcss_sta.json",
                 // "--saved_model","saved_models/baseline_exp_partial0.01/best_score.pth",
                 // "--saved_model","saved_models/semi_exp/best_score.pth",
                 "--mode","test"
